--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,3 +42,6 @@ db.default.url="jdbc:h2:mem:play"
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+
+basicAuthentication.enabled=true
+# basicAuthentication.excluded = ["/path1", "/path2", "/some_regexp(.*)?"]
